Fixed Drop Down in The FrontEnd. The Stars Are Now Behind The Drop Down.
git-svn-id: https://dev.virtuemart.net/svn/virtuemart/branches/com_virtuemart2.0.14mp@7445 87cc427b-4a1e-0410-b729-b2260ec0f063

--- a/components/com_virtuemart/assets/css/vmsite-ltr.css
+++ b/components/com_virtuemart/assets/css/vmsite-ltr.css
@@ -63,7 +63,7 @@ span.addtocart-button input.addtocart-button-disabled {width:auto;background:#f2
 .orderlistcontainer div.activeOrder{background:#FFF top right no-repeat url(../images/vmgeneral/arrow_down.png);cursor:pointer;border:solid #CAC9C9 1px;border-radius:4px;-webkit-border-radius:4px;-moz-border-radius:4px;font-size:12px;padding:2px 24px 1px 12px;}
 .orderlistcontainer a{text-decoration:none;display:block;}
 .orderlistcontainer a :hover{text-decoration:none;display:block;color:#EEE;background:#777;}
-.orderlistcontainer div.orderlist{display:none;position:absolute;border:solid #CAC9C9 1px;background:#FFF;cursor:pointer;}
+.orderlistcontainer div.orderlist{display:none;position:absolute;border:solid #CAC9C9 1px;background:#FFF;cursor:pointer;z-index: 1;}
 .orderlistcontainer div.orderlist div{padding:2px 12px 1px;}
 .orderlistcontainer div.orderlist div:hover{color:#EEE;background:#CAC9C9;}
 .ask-a-question-view .product-summary{border-bottom:solid #CAC9C9 1px;margin:25px 0 0;padding:0 0 10px;}
